...
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView2Sai" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".LoginActivity">

        <Button
            android:id="@+id/LoginbtnSai"
            style="@style/loginBtoStyleSai"
            android:layout_width="251dp"
            android:layout_height="49dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="72dp"
...
