<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iconImageViewSai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/pika" />

    <EditText
        android:id="@+id/newMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/DialogMenuofthree"/>

</LinearLayout>